mgmt/dev/helm/loki-base/kustomize/tenants/canary-user/collectors/cloudtrail2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-cloudtrail2
  namespace: tenant-canary-user
  labels:
    tenant: canary-user
    collector: cloudtrail2
    type: aws
spec:
  selector:
    matchLabels:
      app: aws-cloudtrail2
  template:
    metadata:
      labels:
        app: aws-cloudtrail2
    spec:
      volumes:
        - name:  aws-cloudtrail2
          secret:
            secretName:  aws-cloudtrail2
      containers:
      - name: aws-cloudtrail2
        image: grafana/alloy:v1.12.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: aws-cloudtrail2
            readOnly: true
            mountPath: /etc/alloy/
