mgmt/dev/helm/loki-base/kustomize/tenants/canary-user/collectors/cloudtrail2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-cloudtrail2
  namespace: tenant-canary-user
  annotations:
    tenant: canary-user
    collector: cloudtrail2
    type: aws
spec:
  selector:
    app: aws-cloudtrail2
  ports:
  - port: 8080
    targetPort: 8080
