mgmt/dev/helm/loki-base/kustomize/tenants/canary-user/collectors/cloudtrail2/httproute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-cloudtrail2
  namespace: tenant-canary-user
  annotations:
    tenant: canary-user
    collector: cloudtrail2
    type: aws
    env: dev
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/rewrites: "serviceName=aws-cloudtrail2 rewrite=/loki/api/v1/raw"
    nginx.org/auth-type: "basic"
    nginx.org/auth-secret: "htpasswd"
spec:
  rules:
    - host: siem.v2.dev.accuknox.com
      http:
        paths:
          - path: /dev/canary-user/3ff95da74d5a2314ce54da2c2b24bb63/cloudtrail2/push
            pathType: Prefix
            backend:
              service:
                name: aws-cloudtrail2
                port:
                  number: 8080
